# Multi-Agent-Productivity-Platform

./: .gitignore  DEPLOYMENT_TROUBLESHOOTING.md  README.md  VERCEL_DEPLOYMENT.md  docker-compose.yml  env.example  pyproject.toml  render-backend.yaml  render-frontend.yaml  simplified-deployment.md  vercel-supabase-deployment.md  vercel.json
api/: health.js  status.js
api/agents/: status.js
api/agents/[id]/: start.js  stop.js
api/workflows/: create.js  status.js
backend/: main.py
backend/agents/: agent_manager.py  executor_agent.py  observer_agent.py  planner_agent.py
backend/api/routes/: agents.py  monitoring.py  tasks.py  workflows.py
backend/core/: config.py  database.py  redis_client.py
backend/models/: __init__.py
backend/services/: agent_manager.py  mcp_client.py
docker/: Dockerfile.backend  Dockerfile.frontend  nginx.conf
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.tsx  index.css  index.tsx
frontend/src/components/: Layout.tsx
frontend/src/pages/: Agents.tsx  Dashboard.tsx  Monitoring.tsx  Settings.tsx  Tasks.tsx  Workflows.tsx
frontend/src/services/: api.ts
mcp-server/: main.py
scripts/: deployment.md
