[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flowagent"
version = "0.1.0"
description = "Multi-Agent Productivity Platform with LangChain, MCP, FastAPI, Redis, GPT-4, React"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "langchain>=0.0.300",
    "langchain-openai>=0.0.5",
    "langchain-community>=0.0.10",
    "redis>=4.0.0",
    "sqlalchemy>=1.4.0",
    "alembic>=1.8.0",
    "psycopg2-binary>=2.9.0",
    "pydantic>=1.10.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "celery>=5.2.0",
    "prometheus-client>=0.15.0",
    "structlog>=22.0.0",
    "httpx>=0.24.0",
    "websockets>=10.0",
    "aiofiles>=22.0.0",
    "python-dotenv>=0.19.0",
    "schedule>=1.1.0",
    "croniter>=1.3.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.setuptools.packages.find]
include = ["backend*", "mcp-server*"]
exclude = ["frontend*", "docker*", "scripts*"]
